<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:verticalScrollbarPosition="left"
    tools:context=".ui.activity.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">

        <com.github.florent37.shapeofview.shapes.RoundRectView
            android:id="@+id/rrv_image_movie_detail"
            android:layout_width="120dp"
            android:layout_height="150dp"
            app:shape_roundRect_bottomLeftRadius="15dp"
            app:shape_roundRect_bottomRightRadius="15dp"
            app:shape_roundRect_topLeftRadius="15dp"
            app:shape_roundRect_topRightRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_image_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="matrix"
                app:srcCompat="@drawable/ic_round_movie_filter_24" />
        </com.github.florent37.shapeofview.shapes.RoundRectView>

        <TextView
            android:id="@+id/tv_title_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rrv_image_movie_detail"
            app:layout_constraintTop_toTopOf="@+id/rrv_image_movie_detail" />

        <TextView
            android:id="@+id/tv_overview_overview_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_movie_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_title_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_movie_detail" />

        <TextView
            android:id="@+id/tv_genre_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/genre_title"
            app:layout_constraintBottom_toTopOf="@+id/tv_title_release_status_movie_detail"
            app:layout_constraintEnd_toStartOf="@+id/pb_user_score_movie_detail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_overview_overview_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_overview_detail"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_title_release_status_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/status_title"
            app:layout_constraintEnd_toEndOf="@+id/pb_user_score_movie_detail"
            app:layout_constraintStart_toStartOf="@+id/rrv_image_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_user_score_movie_detail" />

        <TextView
            android:id="@+id/tv_release_status_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/status_title"
            app:layout_constraintEnd_toEndOf="@+id/pb_user_score_movie_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_title_release_status_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_release_status_movie_detail" />

        <TextView
            android:id="@+id/tv_title_release_date_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/release_date_title"
            app:layout_constraintEnd_toEndOf="@+id/tv_release_status_movie_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_release_status_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_status_movie_detail" />

        <TextView
            android:id="@+id/tv_release_date_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/release_date_value"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_release_date_movie_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_title_release_date_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_release_date_movie_detail" />

        <TextView
            android:id="@+id/tv_title_runtime_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/runtime_title"
            app:layout_constraintEnd_toEndOf="@+id/tv_release_date_movie_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_release_date_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_movie_detail" />

        <TextView
            android:id="@+id/tv_runtime_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/runtime_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_runtime_movie_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_title_runtime_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_runtime_movie_detail" />

        <ProgressBar
            android:id="@+id/pb_user_score_movie_detail"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:indeterminate="false"
            android:background="@drawable/background_circural_progress_bar"
            android:max="10"
            android:progress="7"
            android:progressDrawable="@drawable/circural_progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/tv_overview_overview_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_overview_detail" />

        <TextView
            android:id="@+id/tv_user_score_movie_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/user_score_detail"
            app:layout_constraintBottom_toBottomOf="@+id/pb_user_score_movie_detail"
            app:layout_constraintEnd_toEndOf="@+id/pb_user_score_movie_detail"
            app:layout_constraintStart_toStartOf="@+id/pb_user_score_movie_detail"
            app:layout_constraintTop_toTopOf="@+id/pb_user_score_movie_detail" />

        <TextView
            android:id="@+id/tv_title_user_score_movie_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/user_score_title"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/pb_user_score_movie_detail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/pb_user_score_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/pb_user_score_movie_detail" />

        <ProgressBar
            android:id="@+id/pb_movie_detail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>