<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="5dp">

    <com.github.florent37.shapeofview.shapes.RoundRectView
        android:id="@+id/rrv_image_movie"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:shape_roundRect_bottomLeftRadius="15dp"
        app:shape_roundRect_bottomRightRadius="15dp"
        app:shape_roundRect_topLeftRadius="15dp"
        app:shape_roundRect_topRightRadius="15dp">

        <ImageView
            android:id="@+id/iv_image_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_round_movie_filter_24" />
    </com.github.florent37.shapeofview.shapes.RoundRectView>

    <TextView
        android:id="@+id/tv_title_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rrv_image_movie"
        app:layout_constraintTop_toTopOf="@+id/rrv_image_movie" />

    <TextView
        android:id="@+id/tv_movie_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:minLines="1"
        android:text="@string/overview_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_movie"
        app:layout_constraintStart_toStartOf="@+id/tv_title_movie"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

    <TextView
        android:id="@+id/tv_movie_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/user_score"
        app:layout_constraintEnd_toEndOf="@+id/tv_movie_overview"
        app:layout_constraintStart_toStartOf="@+id/tv_movie_overview"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview" />

</androidx.constraintlayout.widget.ConstraintLayout>